@@ -44,6 +44,8 @@ documents those changes that are of interest to users and admins.
     automatically thus causing user confusion on what is most likely an
     admin's mistake.
  -- sview - color column keeps reference color when highlighting.
+ -- Configuration parameter MaxJobCount changed from 16-bit to 32-bit field.
+    The default MaxJobCount was changed from 5,000 to 10,000.
 
 * Changes in SLURM 2.2.0.pre5
 =============================
